--- a/task5/package.json
+++ b/task5/package.json
@@ -1,9 +1,9 @@
 {
   "name": "scrapbook-node-docker-client-as-container",
   "version": "0.0.0",
-  "private": true,
+  "main": "app.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
   "dependencies": {
     "express": "~4.9.0",
